--- a/example/index.html
+++ b/example/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Example App</title>
-    <script src="dist/index.min.js"></script>
+    <script src="dist/index.js"></script>
 </head>
 
 <body>
