--- a/example/index.html
+++ b/example/index.html
@@ -12,7 +12,27 @@
 <body>
     <script>
 
-        Elm.Main.init({ node: document.body })
+        var session = null
+
+        try {
+            session = JSON.parse(localStorage.getItem("elm-debug"))
+        } catch (_) {
+            console.log("parse failed")
+        }
+
+        var example = Elm.Main.init({
+            node: document.body,
+            flags: {
+                session: session
+            }
+        })
+
+        example.ports.outPort.subscribe(function (output) {
+            if (output.session) {
+
+                localStorage.setItem("elm-debug", JSON.stringify(output.session))
+            }
+        })
 
     </script>
 </body>
