--- a/example/index.html
+++ b/example/index.html
@@ -12,25 +12,18 @@
 <body>
     <script>
 
-        var session = null
-
-        try {
-            session = JSON.parse(localStorage.getItem("elm-debug"))
-        }
-        catch (_) {
-            console.log("parse failed")
-        }
-
         var example = Elm.Main.init({
             node: document.body,
             flags: {
-                session: session
+                session: localStorage.getItem("elm-debug")
             }
         })
 
         example.ports.outPort.subscribe(function (output) {
+
             if (output.session) {
-                localStorage.setItem("elm-debug", JSON.stringify(output.session))
+
+                localStorage.setItem("elm-debug", output.session)
             }
         })
 
