fixed port error

--- a/example/index.html
+++ b/example/index.html
@@ -19,7 +19,7 @@
             }
         })
 
-        example.ports.outPort.subscribe(function (output) {
+        example.ports.output.subscribe(function (output) {
 
             if (output.session) {
 
